openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: esposizione-contratti
  name: esposizione-contratti
spec:
  ports:
  - name: http
    port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    app: esposizione-contratti
  type: NodePort
